refactor release update and today architecture